Fix: align of player's birthplace

--- a/css/main.css
+++ b/css/main.css
@@ -375,13 +375,9 @@ table {
 }
 
 .player__info--right {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-  -ms-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 .social-networks {
