--- a/scss/pages/_players.scss
+++ b/scss/pages/_players.scss
@@ -91,8 +91,7 @@
 }
 
 .player__info--right {
-  flex-direction : row-reverse;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .social-networks {
